// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataGridDrafts DataGridDrafts renders correctly with no rows 1`] = `
<div
  className="repository--data-grid-drafts-container"
>
  <div
    className="react-data-table-component"
    columns={
      Array [
        Object {
          "name": "Draft ID",
          "selector": "draftId",
          "sortable": true,
        },
        Object {
          "name": "Title",
          "selector": "title",
          "sortable": true,
        },
        Object {
          "name": "Created At",
          "selector": "createdAt",
          "sortable": true,
        },
        Object {
          "name": "Updated At",
          "selector": "updatedAt",
          "sortable": true,
        },
        Object {
          "name": "Latest Version",
          "selector": "latestVersion",
          "sortable": true,
        },
        Object {
          "name": "Revision Count",
          "selector": "revisionCount",
          "sortable": true,
        },
        Object {
          "cell": [Function],
          "name": "Preview",
        },
      ]
    }
    data={Array []}
    dense={true}
    keyField="draftId"
    onSelectedRowsChange={[Function]}
    pagination={true}
    paginationComponentOptions={
      Object {
        "noRowsPerPage": true,
      }
    }
    paginationPerPage={100}
    paginationRowsPerPageOptions={
      Array [
        100,
      ]
    }
    selectableRows={true}
    striped={true}
    title="Modules (0 Results)"
  >
    react-data-table-component
  </div>
</div>
`;

exports[`DataGridDrafts DataGridDrafts renders correctly with rows 1`] = `
<div
  className="repository--data-grid-drafts-container"
>
  <div
    className="react-data-table-component"
    columns={
      Array [
        Object {
          "name": "Draft ID",
          "selector": "draftId",
          "sortable": true,
        },
        Object {
          "name": "Title",
          "selector": "title",
          "sortable": true,
        },
        Object {
          "name": "Created At",
          "selector": "createdAt",
          "sortable": true,
        },
        Object {
          "name": "Updated At",
          "selector": "updatedAt",
          "sortable": true,
        },
        Object {
          "name": "Latest Version",
          "selector": "latestVersion",
          "sortable": true,
        },
        Object {
          "name": "Revision Count",
          "selector": "revisionCount",
          "sortable": true,
        },
        Object {
          "cell": [Function],
          "name": "Preview",
        },
      ]
    }
    data={
      Array [
        Object {
          "createdAt": "mock-created-at",
          "draftId": "mock-draft-id",
          "latestVersion": "mock-latest-version",
          "revisionCount": "revision-count",
          "title": "mock-title",
          "updatedAt": "mock-updated-at",
        },
      ]
    }
    dense={true}
    keyField="draftId"
    onSelectedRowsChange={[Function]}
    pagination={true}
    paginationComponentOptions={
      Object {
        "noRowsPerPage": true,
      }
    }
    paginationPerPage={100}
    paginationRowsPerPageOptions={
      Array [
        100,
      ]
    }
    selectableRows={true}
    striped={true}
    title="Modules (1 Results)"
  >
    react-data-table-component
  </div>
</div>
`;

exports[`DataGridDrafts Preview cell renders as expected 1`] = `
<a
  href="/preview/mock-draft-id"
  rel="noreferrer"
  target="_blank"
>
  Open Preview
</a>
`;
